[gd_scene load_steps=2 format=3 uid="uid://cni5tldua6sbj"]

[ext_resource type="Script" uid="uid://dnkdjblf3qukc" path="res://scripts/interaction/interaction_area/interaction_area.gd" id="1_pywj1"]

[node name="InteractionArea" type="Area2D"]
script = ExtResource("1_pywj1")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
